# indian-stock-scanner

./: .gitignore  CLAUDE.md  README.md  USAGE.md  pyproject.toml
.codex/skills/publish-stock-dashboard/: SKILL.md
.github/workflows/: deploy-pages.yml
data/: universe.json
data/reports/: report-2026-04-17.json  report-2026-04-17.md  report-2026-04-18.json  report-2026-04-18.md
docs/superpowers/plans/: 2026-04-17-scoring-strategy-fixes.md
docs/superpowers/specs/: 2026-04-17-scoring-strategy-fixes-design.md  2026-04-17-stock-dashboard-design.md
src/stock_scanner/: __init__.py  cli.py  demo_data.py  frontend_data.py  models.py  pipeline.py  providers.py  reporting.py  scoring.py  storage.py  universe.py
tests/: test_scanner.py
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/public/data/: index.json
web/public/data/reports/: report-2026-04-17.json  report-2026-04-17.md  report-2026-04-18.json  report-2026-04-18.md
web/src/: App.tsx  styles.css  types.ts
web/src/lib/: loadReports.ts
